Added bootstrap and included navbar

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/header') %>
+<%- include('./partials/nav') %>
 
     This is the Layout
     <%- body %>
-    
+
 <%- include('./partials/footer') %>
