--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,10 +14,13 @@
           <a class="nav-link" href="Contact.html">Contact</a>
           <form class="container-fluid mt-1">
             <!-- <button class="btn btn-outline-success me-2" type="button">Main button</button> -->
-            <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#LoginModal">Login</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#SignUpmodal">Sign Up</button>
+            <!-- <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#LoginModal">Login</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#SignUpmodal">Sign Up</button> -->
+            <button class="btn btn-sm btn-outline-secondary" type="button">Login</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">Sign Up</button>
           </form>
         </div>
       </div>
     </div>
   </nav>
+  <p>Header</p>
