--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -1,12 +1,14 @@
 <div class="mx-auto d-block w-25 p-3">
-    <form>
+
+    <%# Login Form %>
+    <form action="/user/create_session" method="POST">
         <div class="mb-3">
           <label for="InputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="InputEmail1">
+          <input type="email" name="email" class="form-control" id="InputEmail1" required>
         </div>
         <div class="mb-3">
           <label for="InputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="InputPassword1">
+          <input type="password" name="password" class="form-control" id="InputPassword1" required>
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="Check1">
