Added functions for Creating User

--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -16,7 +16,7 @@
         </div>
         <div class="mb-3">
             <label for="InputConfirmPassword1" class="form-label">Confirm Password</label>
-            <input type="password" name="confirm-password" class="form-control" id="InputConfirmPassword1" required>
+            <input type="password" name="confirm_password" class="form-control" id="InputConfirmPassword1" required>
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </form>
