Modified nav buttons for signed in users and added signout function

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,14 +10,17 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="Gallery.html">Gallery</a>
-          <a class="nav-link" href="/user/profile">About</a>
+          <% if(locals.user) { %>
+            <a class="nav-link" href="/user/profile">About</a>
+          <% } %>
           <a class="nav-link" href="Contact.html">Contact</a>
           <form class="container-fluid mt-1">
-            <!-- <button class="btn btn-outline-success me-2" type="button">Main button</button> -->
-            <!-- <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#LoginModal">Login</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#SignUpmodal">Sign Up</button> -->
-            <button class="btn btn-sm btn-outline-secondary" type="button">Login</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">Sign Up</button>
+            <% if(locals.user) { %>
+              <button onclick="location.href='/user/logout'" class="btn btn-sm btn-outline-secondary" type="button">Sign Out</button>
+            <% } else { %>
+              <button onclick="location.href='/user/login'" class="btn btn-sm btn-outline-secondary" type="button">Login</button>
+            <button onclick="location.href='/user/signup'" class="btn btn-sm btn-outline-secondary" type="button">Sign Up</button>
+            <% } %>
           </form>
         </div>
       </div>
