Added Static files support

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -1,6 +1,6 @@
+<h4>Sign In</h4>
 <div class="mx-auto d-block w-25 p-3">
 
-    <%# Login Form %>
     <form action="/user/create_session" method="POST">
         <div class="mb-3">
           <label for="InputEmail1" class="form-label">Email address</label>
