--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -1,6 +1,6 @@
+<h4>Sign Up</h4>
 <div class="mx-auto d-block w-25 p-3">
 
-    <%# Sign Up Form %>
     <form action="/user/create" method="POST">
         <div class="mb-3">
             <label for="InputName" class="form-label">Name</label>
