--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid mx-2">
       <a id="brnd" class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-        Gift-A-Byte</a>
+        9oice</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,4 +26,3 @@
       </div>
     </div>
   </nav>
-  <p>Header</p>
