--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,1 @@
-p{
-    color: rgb(163, 131, 236);
-}
-
-body{
-    background-color: rgb(244, 212, 165);
-}
-
-nav button{
-    align-items: center;
-}
+p{color:#a383ec}body{background-color:#f4d4a5}
