Added some Styling

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,1 @@
-p{color:#a383ec}body{background-color:#f4d4a5}
+p{color:#a383ec}body{background-color:#f4d4a5}body main{height:100vh}#forms{min-width:300px;background-color:#aba9ef;border-radius:10px}
