--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -1,4 +1,4 @@
-<div id="forms" class="mx-auto d-block w-25 p-3">
+<div class="mx-auto d-block w-25 p-3 user-forms">
   <h4>Sign In</h4>
     <form action="/user/create_session" method="POST">
         <div class="mb-3">
