--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -1,6 +1,6 @@
-<div id="forms" class="mx-auto d-block w-25 p-3">
+<div class="mx-auto d-block w-25 p-3 user-forms">
   <h4>Sign Up</h4>
-    <form action="/user/create" method="POST">
+    <form action="/user/create" method="POST" class="needs-validation">
         <div class="mb-3">
             <label for="InputName" class="form-label">Name</label>
             <input type="text" name="name" class="form-control" id="InputName" required>
