--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,8 @@
 <!-- Navbar Menu -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid mx-2">
-      <a id="brnd" class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+      <a id="brnd" class="navbar-brand" href="#">
+        <!-- <img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top"> -->
         9oice</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
