Displayed User postso homepage

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -13,4 +13,16 @@
         </div>
     </section>
 <% } %>
+<div class="container" id="userPosts" class="mt-5">
+    <% for(post of posts) { %>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title"><%= post.user.name %></h5>
+              <p class="card-text"><%= post.content %></p>
+              <a href="#" class="card-link">Like</a>
+              <a href="#" class="card-link">Comment</a>
+            </div>
+        </div>
+    <% } %>
+</div>
 
