--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -6,13 +6,19 @@ p{
 
 body{
     background-color: rgb(244, 212, 165);
-    main{
-        height: 100vh;
-    }
 }
 
 .user-forms{
     min-width: 300px;
     background-color: $form-color;
     border-radius: 10px;
+}
+
+#userPosts{
+    width: 30%;
+    min-height: 300px;
+    div{
+        margin-top: 1rem;
+        text-align: center;
+    }
 }
