--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -22,6 +22,9 @@
               <a href="#" class="card-link">Like</a>
               <a href="#" class="card-link">Comment</a>
             </div>
+            <div id="cmnt">
+                <textarea name="comment" rows="2" placeholder="Comment"></textarea>
+            </div>
         </div>
     <% } %>
 </div>
