--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <!-- Navbar Menu -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid mx-2">
       <a id="brnd" class="navbar-brand" href="#">
         <!-- <img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top"> -->
