--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -4,14 +4,20 @@ p{
     color: rgb(163, 131, 236);
 }
 
+nav{
+    background-color: #85a1dc;
+}
+
 body{
-    background-color: rgb(244, 212, 165);
+    background-color: rgb(234, 234, 234);
 }
 
 .user-forms{
     min-width: 300px;
     background-color: $form-color;
     border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    transform: rotateX(5deg);
 }
 
 #userPosts{
@@ -20,5 +26,59 @@ body{
     div{
         margin-top: 1rem;
         text-align: center;
+        a{
+            text-align: right;
+        }
     }
+    p{
+        margin: 0%;
+    }
+}
+
+#post-comments-list{
+    div{
+        margin-left: 2rem;
+        text-align: left;
+    }
+}
+
+#posts-container{
+    max-width: 40%;
+    #posts{
+        padding: 2rem;
+        margin-top: 2rem;
+        background-color: rgb(204, 244, 210);
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+        transform: rotateX(5deg);
+        border-radius: 0.5rem;
+        #name-col{
+            color: grey;
+        }
+        #post-col{
+            font-size: 2rem;
+        }
+        #comment-col{
+            margin: 2rem 0;
+            #commentbox{
+                outline: none;
+                border: 0px;
+                margin: 0.7rem 0;
+            }
+        }
+        #comment-display{
+            margin: 0.7rem -2rem 0;
+            #comment-user{
+                color: dimgray;
+                font-size: 0.8rem;
+            }
+            #comment-content{
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
+
+
+#cmntt{
+    border: 2px solid rgb(242, 3, 3);
 }
