--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -44,6 +44,11 @@
                     <div id="comment-user"><%= comment.user.name %></div>
                     <div id="comment-content"><%= comment.content %></div>
                     <div id="comment-time"><%= comment.createdAt.toLocaleString() %></div>
+                    <% if(locals.user && (locals.user.id == comment.user.id)) { %>
+                        <span id="delete-comment" >
+                            <a href="/comment/destroy/<%= comment._id %>"><i class="fa-solid fa-trash"></i></a>
+                        </span>
+                    <% } %>
                 </div>
             <% } %>
             <!-- Only logged in users can comment -->
