--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -14,63 +14,5 @@
     </section>
 <% } %>
 
-<!-- Displaying user Posts -->
-<div class="container text-center" id="posts-container">
-    <% for(post of posts) { %>
-        <div class="row row-cols-1" id="posts">
-            <div class="col text-start" id="name-col">
-                <%= post.user.name %>
-            </div>
-            <div class="col" id="post-col">
-                <%= post.content %>
-            </div>
-
-            <!-- Displaying post interaction option only to the logged in user -->
-            <% if(locals.user) { %>
-                <div class="col" id="like-share">
-                    <span class="m-2"><a href="#">Like</a></span>
-                    <span class="m-2"><a href="#">Share</a></span>
-
-                    <!-- Displaying Delete Option only to the Creator of the post -->
-                    <% if(locals.user.id == post.user.id) { %>
-                        <span class="m-2"><a href="/posts/destroy/<%= post._id %>">Delete</a></span>
-                    <% } %>
-                </div>
-            <% } %>
-
-            <!-- Displaying Comments -->
-            <% for(comment of post.comment) { %>
-                <div class="col text-end" id="comment-display">
-                    <div id="comment-user"><%= comment.user.name %></div>
-                    <div id="comment-content"><%= comment.content %></div>
-                    <div id="comment-time"><%= comment.createdAt.toLocaleString() %></div>
-                    <% if(locals.user && (locals.user.id == comment.user.id)) { %>
-                        <span id="delete-comment" >
-                            <a href="/comment/destroy/<%= comment._id %>"><i class="fa-solid fa-trash"></i></a>
-                        </span>
-                    <% } %>
-                </div>
-            <% } %>
-            <!-- Only logged in users can comment -->
-            <% if(locals.user) { %>
-                <div class="col" id="comment-col">
-                    <form action="/comment/create" method="post">
-                        <input type="text" class="form-control" name="content" id="commentbox" placeholder="Comment" required>
-                        <input type="hidden" name="post" value="<%= post._id %>">
-                        <button type="submit" class="btn btn-primary">Add Comment</button>
-                    </form>
-                </div>
-            <% } else { %>
-                <div class="col" id="comment-col">
-                    <form>
-                        <fieldset disabled>
-                            <input class="form-control" id="disabledInput" type="text" placeholder="Please Login to Comment" disabled>
-                            <button type="submit" class="btn btn-primary">Add Comment</button>
-                        </fieldset>
-                    </form>
-                </div>
-            <% } %>
-        </div>
-    <% } %>
-</div>
+<%- include('partials/posts') %>
 
