--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
 <h4>Profile</h4>
-<p><%= user.name %></p>
-<p><%= user.email %></p>
+<p><%= user_profile.name %></p>
+<p><%= user_profile.email %></p>
