--- a/views/style.ejs
+++ b/views/style.ejs
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="/assets/css/style.css">   <!-- Base Stylesheet -->
 <link rel="stylesheet" href="/assets/css/nav.css">    <!-- Navbar Style -->
-<link rel="stylesheet" href="/assets/css/home.css">
+<link rel="stylesheet" href="/assets/css/home.css">    <!-- Home Style -->
