Added one more style

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -25,6 +25,10 @@
   list-style: none;
   position: fixed;
 }
+#home-container section#user-friends ul a {
+  color: rgb(110, 4, 110);
+  text-decoration: none;
+}
 #home-container section#user-friends ul i {
   color: darkcyan;
 }
