--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,3 +48,11 @@
   color: dimgray;
   font-size: 0.65rem;
 }
+
+#flashmessage {
+  position: absolute;
+  display: flex;
+  max-width: fit-content;
+  padding: 4px;
+  background-color: rgb(234, 139, 50);
+}
