--- a/views/partials/comment.ejs
+++ b/views/partials/comment.ejs
@@ -1,6 +1,6 @@
 <!-- Displaying Comments -->
 <% for(comment of post.comment) { %>
-    <div class="col text-end" id="comment-display">
+    <div class="col text-end" id="comment-display-<%= comment._id %>">
         <div id="comment-user"><%= comment.user.name %></div>
         <div id="comment-content"><%= comment.content %></div>
         <div id="comment-time"><%= comment.createdAt.toLocaleString() %></div>
@@ -14,7 +14,7 @@
 <!-- Only logged in users can comment -->
 <% if(locals.user) { %>
     <div class="col" id="comment-col">
-        <form action="/comment/create" method="post">
+        <form id="commentForm-<%= post._id %>" action="/comment/create" method="post" >
             <input type="text" class="form-control" name="content" id="commentbox" placeholder="Comment" required>
             <input type="hidden" name="post" value="<%= post._id %>">
             <button type="submit" class="btn btn-primary">Add Comment</button>
