--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 posts" id="posts-<%= post._id %>">
+<li class="row row-cols-1 posts" id="posts-<%= post._id %>">
     <div class="col text-start" id="name-col">
         <%= post.user.name %>
     </div>
@@ -19,5 +19,7 @@
         </div>
     <% } %>
 
-    <%- include('comment') %>
-</div>
+    <div id="post-comment-<%= post._id %>">
+        <%- include('comment') %>
+    </div>
+</li>
