Comment functions are now done via ajax

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -41,6 +41,7 @@
         </section>
     <% } %>
 </div>
+<script src="/js/commentData.js"></script>
 <script src="/js/postdata.js"></script>
 
    
