--- a/views/partials/comment.ejs
+++ b/views/partials/comment.ejs
@@ -6,7 +6,7 @@
         <div id="comment-time"><%= comment.createdAt.toLocaleString() %></div>
         <% if(locals.user && (locals.user.id == comment.user.id)) { %>
             <span id="delete-comment" >
-                <a href="/comment/destroy/<%= comment._id %>"><i class="fa-solid fa-trash"></i></a>
+                <a class="delete-comment-button" href="/comment/destroy/<%= comment._id %>"><i class="fa-solid fa-trash"></i></a>
             </span>
         <% } %>
     </div>
