--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
     <p><%= user_profile.email %></p>
     <div class="mx-auto d-block w-25 p-3 user-forms">
         <h4>Edit Details</h4>
-          <form action="/user/update/<%= user_profile.id %>" method="POST" class="needs-validation">
+          <form action="/user/update/<%= user_profile.id %>" method="POST" enctype="multipart/form-data" class="needs-validation">
               <div class="mb-3">
                   <label for="InputName" class="form-label">Name</label>
                   <input type="text" name="name" class="form-control" id="InputName" value="<%= user_profile.name %>" required>
@@ -14,6 +14,10 @@
               <div class="mb-3">
                 <label for="InputEmail1" class="form-label">Email address</label>
                 <input type="email" name="email" class="form-control" id="InputEmail1" value="<%= user_profile.email %>" required>
+              </div>
+              <div class="mb-3">
+                <label for="Avatar" class="form-label">Profile Pic</label>
+                <input type="file" name="avatar" class="form-control" id="Avatar">
               </div>
               <button type="submit" class="btn btn-primary">Update</button>
             </form>
