--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <p><%= user_profile.email %></p>
 <!--update form will be visible only to the respective authenticated users-->
 <% if(user.id == user_profile.id) { %>
-  <img src="<%= user.avatar %>" alt="<%= user.name %>">
+  <img src="<%= user.avatar %>" alt="<%= user.name %>" style="width: 120px; height: 120px;">
   <div class="mx-auto d-block w-25 p-3 user-forms">
     <h4>Edit Details</h4>
       <form action="/user/update/<%= user_profile.id %>" method="POST" enctype="multipart/form-data" class="needs-validation">
