Login/Signup using google(Passport strategy) complete

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -15,4 +15,13 @@
         </div>
         <button type="submit" class="btn btn-primary">Sign In</button>
       </form>
+      <br>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a href="/user/auth/google">
+          <button class="btn btn-outline-danger" type="button"><span><i class="fa-brands fa-google"></i></span> &nbsp; &nbsp;<span>Sign In With Google</span></button>
+        </a>
+        <a href="http://">
+          <button class="btn btn-outline-primary" type="button"><span><i class="fa-brands fa-facebook-f"></i></span> &nbsp; <span>Sign In With Facebook</span></button>
+        </a>
+      </div>
 </div>
