--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -19,4 +19,13 @@
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </form>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <div class="text-center">OR</div>
+        <a href="/user/auth/google">
+          <button class="btn btn-outline-danger" type="button"><span><i class="fa-brands fa-google"></i></span> &nbsp; &nbsp;<span>Sign Up With Google</span></button>
+        </a>
+        <a href="http://">
+          <button class="btn btn-outline-primary" type="button"><span><i class="fa-brands fa-facebook-f"></i></span> &nbsp; <span>Sign Up With Facebook</span></button>
+        </a>
+      </div>
 </div>
