Added Passport Facebook Strategy for login using facebook

--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -24,7 +24,7 @@
         <a href="/user/auth/google">
           <button class="btn btn-outline-danger" type="button"><span><i class="fa-brands fa-google"></i></span> &nbsp; &nbsp;<span>Sign Up With Google</span></button>
         </a>
-        <a href="http://">
+        <a href="/user/auth/facebook">
           <button class="btn btn-outline-primary" type="button"><span><i class="fa-brands fa-facebook-f"></i></span> &nbsp; <span>Sign Up With Facebook</span></button>
         </a>
       </div>
