Added Forgot Password Feature, mailer and routes

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -9,9 +9,8 @@
           <label for="InputPassword1" class="form-label">Password</label>
           <input type="password" name="password" class="form-control" id="InputPassword1" required>
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="Check1">
-          <label class="form-check-label" for="Check1">Remember Me</label>
+        <div class="mb-3">
+          <a href="/user/forgot-password">Forgot Password</a>
         </div>
         <button type="submit" class="btn btn-primary">Sign In</button>
       </form>
