--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -44,4 +44,13 @@
 <script src="/js/commentData.js"></script>
 <script src="/js/postdata.js"></script>
 
+<!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
+<script src="/js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function(){
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
+
    
