--- a/views/partials/comment.ejs
+++ b/views/partials/comment.ejs
@@ -4,7 +4,14 @@
         <div id="comment-user"><%= comment.user.name %></div>
         <div id="comment-content"><%= comment.content %></div>
         <div id="comment-time"><%= comment.createdAt.toLocaleString() %></div>
-        <% if(locals.user && (locals.user.id == comment.user.id)) { %>
+        <% if (locals.user){ %>
+            <a class="toggle-like-button" data-likes="<%= comment.likes.length %>" href="/likes/toggle/?id=<%=comment._id%>&type=Comment">
+                    <%= comment.likes.length %> Likes
+            </a>
+        <% }else{ %>
+            <%= comment.likes.length %> Likes
+        <% } %>
+        <% if(locals.user && locals.user.id == comment.user.id) { %>
             <span id="delete-comment" >
                 <a class="delete-comment-button" href="/comment/destroy/<%= comment._id %>"><i class="fa-solid fa-trash"></i></a>
             </span>
