--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -7,17 +7,29 @@
     </div>
 
     <!-- Displaying post interaction option only to the logged in user -->
-    <% if(locals.user) { %>
-        <div class="col" id="like-share">
-            <span class="m-2"><a href="#">Like</a></span>
+    <div class="col" id="like-share">
+        <% if(locals.user) { %>
+            <span class="m-2">
+                <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Posts">
+                    <%= post.likes.length %> Likes
+                </a>
+            </span>
             <span class="m-2"><a href="#">Share</a></span>
-
+        <% } else { %>
+            <span class="m-2">
+                <%= post.likes.length %> Likes
+            </span>
+            <span class="m-2"><a href="#">Share</a></span>
+        <% } %>
             <!-- Displaying Delete Option only to the Creator of the post -->
-            <% if(locals.user.id == post.user.id) { %>
-                <span class="m-2"><a class="delete-post-button" href="/posts/destroy/<%= post._id %>">Delete</a></span>
-            <% } %>
-        </div>
-    <% } %>
+        <% if(locals.user && locals.user.id == post.user.id) { %>
+            <span class="m-2">
+                <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">Delete</a>
+            </span>
+        <% } %>
+    </div>
+
+
 
     <div id="post-comment-<%= post._id %>">
         <%- include('comment') %>
