User's Friend Feature added

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -38,6 +38,10 @@
                     </li>
                 <% } %>
             </ul>
+
+            <div id="chatbox">
+                <%- include('partials/chatbox') %>
+            </div>
         </section>
     <% } %>
 </div>
