--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,9 +1,33 @@
-<h4>Profile</h4>
-<p><%= user_profile.name %></p>
-<p><%= user_profile.email %></p>
+<link rel="stylesheet" href="/assets/css/profile.css"> 
+
+<div class="container" id="userDetails">
+  <div class="row" >
+    <div class="col" id="name-email">
+      <h4>Profile</h4>
+      <p><%= user_profile.name %></p>
+      <p><%= user_profile.email %></p>
+    </div>
+  
 <!--update form will be visible only to the respective authenticated users-->
 <% if(user.id == user_profile.id) { %>
-  <img src="<%= user.avatar %>" alt="<%= user.name %>" style="width: 120px; height: 120px;">
+  
+    <div class="col" id="friends-list">
+      <h4>Friends</h4>
+      <% for(friend of user_profile.friends) { %>
+        <% if(user_profile.id == friend.from_user.id) { %>
+          <p><a href="/user/profile/<%= friend.to_user.id %>"><%= friend.to_user.name %></a></p>
+        <% } else { %>
+          <p><a href="/user/profile/<%= friend.from_user.id %>"><%= friend.from_user.name %></a></p>
+        <% } %>  
+      <% } %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col" id="Useravatar">
+      <img src="<%= user.avatar %>" alt="<%= user.name %>" style="width: 120px; height: 120px;">
+    </div>
+  </div>
+</div>
   <div class="mx-auto d-block w-25 p-3 user-forms">
     <h4>Edit Details</h4>
       <form action="/user/update/<%= user_profile.id %>" method="POST" enctype="multipart/form-data" class="needs-validation">
@@ -22,4 +46,26 @@
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
   </div>
+<% } %>
+
+<% if(user.id != user_profile.id) { %>
+  <% let isFriend = false %>
+  <% let Friendid = null %>
+  <% for(friend of user_profile.friends) { %>
+    <% if(user.id == friend.from_user.id || user.id == friend.to_user.id) { %>
+      <% isFriend = true %>
+      <% Friendid = friend.id %>
+      <% break %> 
+    <% } %>  
+  <% } %>
+
+  <% if(isFriend) { %>
+    <form action="/user/removeFriend/<%= Friendid %>" method="post">
+      <button type="submit" class="btn btn-primary">Unfriend</button>
+    </form>  
+  <% } else { %>
+    <form action="/user/addFriend/<%= user_profile.id %>" method="post">
+      <button type="submit" class="btn btn-primary">Add Friend</button>
+    </form>
+  <% } %>
 <% } %>
