--- a/views/style.ejs
+++ b/views/style.ejs
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="/assets/css/style.css">   <!-- Base Stylesheet -->
 <link rel="stylesheet" href="/assets/css/nav.css">    <!-- Navbar Style -->
 <link rel="stylesheet" href="/assets/css/home.css">    <!-- Home Style -->
+<link rel="stylesheet" href="/assets/css/chatbox.css">    <!-- chatbox Style -->
